--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,13 +13,18 @@
 body { background-color: #f5f5f5;}
 
 h1{
-    font-size: 3.5rem;
+    font-size: 4.5rem;
     color:#ebd9da;
     padding: 5px;
     font-family:'Helvetica Neue', sans-serif;
+    font-weight: lighter;
 
 }
 
+.items {
+    text-align: left;
+    padding-left: 10px;
+}
 
 .todolist{
     width: 600px;
@@ -37,6 +42,7 @@ input {
     background-color: transparent;
     padding-right: 20px;
     border: none;
+    color: gray;
 
 }
 
@@ -48,17 +54,26 @@ input {
     border: 0;
     background-color: transparent;
     display: inline-block;
+    padding: 3px;
 }
 
-.delete-button:hover {
-  color:red;
-}
+
 ul li {
     list-style: none;
     border: 1px solid rgb(219, 219, 219);
-    font-weight: normal;
+    font-weight:300;
     color:gray;
+    
 }
+
+.items:hover .delete-button {
+    color:red;
+    font-size: medium; 
+    float: right;
+    margin-right: 20px;
+    
+}
+
 
 p {
 font-size: medium;
@@ -67,3 +82,4 @@ color: gray;
 text-align: left;
 padding: 5px;
 }
+
